PR fortran/24005 * interface.c (check_interface1): Fix NULL dereference.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@104544 138bc75d-0d04-0410-961f-82ee72b054a4